[tool.poetry]
name = "ev3dev-sandbox"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
python-ev3dev = "^1.2.0"
python-ev3dev2 = "^2.1.0"
pybricks = "^2.0.0"
pybricks-stubs = "^2.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
